RESOLVED FIXED234584
[iOS] Scroll view pinch zoom gesture sometimes fails to recognize in WKWebView
https://bugs.webkit.org/show_bug.cgi?id=234584
Summary [iOS] Scroll view pinch zoom gesture sometimes fails to recognize in WKWebView
Wenson Hsieh
Reported 2021-12-21 18:19:58 PST
Attachments
For EWS (5.28 KB, patch)
2021-12-21 18:23 PST, Wenson Hsieh
no flags
With test (16.11 KB, patch)
2021-12-22 09:08 PST, Wenson Hsieh
no flags
For landing (16.16 KB, patch)
2021-12-22 10:28 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2021-12-21 18:23:09 PST Comment hidden (obsolete)
Wenson Hsieh
Comment 2 2021-12-22 09:08:15 PST
Created attachment 447807 [details] With test
Simon Fraser (smfr)
Comment 3 2021-12-22 10:22:26 PST
Comment on attachment 447807 [details] With test View in context: https://bugs.webkit.org/attachment.cgi?id=447807&action=review > Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:2024 > + for (WKDeferringGestureRecognizer *gesture in self._touchStartDeferringGestures) { I would call "gesture" "recognizer" here.
Wenson Hsieh
Comment 4 2021-12-22 10:24:32 PST
Comment on attachment 447807 [details] With test View in context: https://bugs.webkit.org/attachment.cgi?id=447807&action=review Thanks for the review! >> Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:2024 >> + for (WKDeferringGestureRecognizer *gesture in self._touchStartDeferringGestures) { > > I would call "gesture" "recognizer" here. Sounds good — renamed the local variable to `gestureRecognizer`.
Wenson Hsieh
Comment 5 2021-12-22 10:28:59 PST
Created attachment 447816 [details] For landing
EWS
Comment 6 2021-12-22 11:13:49 PST
Committed r287366 (245508@main): <https://commits.webkit.org/245508@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 447816 [details].
Note You need to log in before you can comment on or make changes to this bug.